--- a/clasificacion.Rmd
+++ b/clasificacion.Rmd
@@ -315,3 +315,73 @@ write.csv(xgbSolution, file = 'sols/xgbSMOTE.csv', row.names = F, quote = F)
 ```
 
 Puntuacion: 0.79426 mejor que con los otros dos balanceos pero peor que el original
+
+#Clasificación con limpieza de ruido
+
+```{r}
+fullCleaned <- read.csv('data/fullSMOTEandIPF.csv')
+
+nTestRows <- 418
+nRows <- nrow(fullCleaned)
+
+train <- fullCleaned[1 : (nRows - nTestRows), ]
+test <- fullCleaned[(nRows - nTestRows + 1) : nRows,]
+testPassengerId <- 892:1309
+```
+
+### cforest
+
+```{r}
+set.seed(415)
+fit <- cforest(as.factor(Survived) ~ .,
+                 data = train, 
+                 controls=cforest_unbiased(ntree=2000, mtry=3, trace = TRUE))
+```
+
+```{r}
+Prediction <- predict(fit, test, OOB=TRUE, type = "response")
+cforestSolution <- data.frame(PassengerID = testPassengerId, Survived = Prediction)
+write.csv(cforestSolution, file = 'sols/cforestSMOTEandIPF.csv', row.names = F, quote = F)
+```
+
+Puntuacion: 0.77512
+
+### rpart
+
+```{r}
+fit <- rpart(Survived ~ ., data=train, method="class")
+
+Prediction <- predict(fit, test, type = "class")
+rpartSolution <- data.frame(PassengerID = testPassengerId, Survived = Prediction)
+write.csv(rpartSolution, file = 'sols/rpartSMOTEandIPF.csv', row.names = F, quote = F)
+```
+ 
+Puntuacion: 0.77033
+
+### xgboost
+
+```{r}
+predictorsNames = names(train)[names(train) != 'Survived'] #names of columns after data conversion
+dtrain<-xgb.DMatrix(data=data.matrix(train[,predictorsNames]),label=train$Survived)
+dtest<-data.matrix(test[,predictorsNames])
+
+param <- list(  objective           = "binary:logistic", 
+                booster             = "gbtree",
+                eta                 = 0.001, #0.3 #0.3
+                max_depth           = 8, #10
+                subsample           = 0.5, #0.7
+                colsample_bytree    = 0.6 #0.6
+)
+
+nround  = 50 #use 3000 he comentado los parametros anteriores #200
+set.seed(2045)
+clf <- xgboost(param = param, dtrain, nrounds=nround, min_child_weight = 1, verbose=0)
+
+pred <- predict(clf, dtest)
+pred_final <- ifelse(pred>0.5,1,0)
+
+xgbSolution <- data.frame(PassengerID = testPassengerId, Survived = pred_final)
+write.csv(xgbSolution, file = 'sols/xgbSMOTEandIPF.csv', row.names = F, quote = F)
+```
+
+Puntuacion: 0.77033
